--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         ></path>
       </svg>
       <div class="footer">
-        <h1>Copyright &#169; Kurosh's Web Development</h1>
+        <h1>Copyright &#169; 2022 Kurosh's Web Development</h1>
       </div>
     </section>
   </body>
