--- a/index.html
+++ b/index.html
@@ -126,16 +126,17 @@
     <section id="contact">
       <div class="contact-form">
         <h1 class="contact-title">Contact Us!</h1>
-        <input placeholder="Email" type="email" />
-        <input placeholder="Phone number" type="number" />
-        <textarea
-          placeholder="Message"
-          name=""
-          id=""
-          cols="30"
-          rows="10"
-        ></textarea>
-        <button class="contact-btn">Send</button>
+        <form name="contact" method="POST" data-netlify="true">
+          <input placeholder="Email" name="email" type="email" />
+          <input placeholder="Phone number" name="phone" type="number" />
+          <textarea
+            placeholder="Message"
+            name="message"
+            cols="30"
+            rows="10"
+          ></textarea>
+          <button type="submit" class="contact-btn">Send</button>
+        </form>
       </div>
       <div class="contact-image">
         <img src="/images/contact-img.jpg" alt="" />
