packages update BUY NOW!!!

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </p>
       <div class="packages">
         <div class="package" id="package1">
-          <h2 class="package-title">Developer</h2>
+          <h2 class="package-title">Starter</h2>
           <p class="package-subtitle">starting at</p>
           <h3 class="price">49<span class="currency">$</span></h3>
           <button class="package-buy-btn">Get Plan</button>
@@ -66,26 +66,28 @@
           </ul>
         </div>
         <div class="package" id="package2">
-          <h2 class="package-title">Developer</h2>
+          <h2 class="package-title">Middle</h2>
           <p class="package-subtitle">starting at</p>
-          <h3 class="price">49<span class="currency">$</span></h3>
+          <h3 class="price">69<span class="currency">$</span></h3>
           <button class="package-buy-btn">Get Plan</button>
 
           <ul>
-            <li>Up to 3 pages</li>
+            <li>Up to 5 pages</li>
+            <li>Modern Design</li>
             <li>24/7 up time</li>
             <li>1 year technical support</li>
           </ul>
         </div>
         <div class="package" id="package3">
-          <h2 class="package-title">Developer</h2>
+          <h2 class="package-title">Premium</h2>
           <p class="package-subtitle">starting at</p>
-          <h3 class="price">49<span class="currency">$</span></h3>
+          <h3 class="price">99<span class="currency">$</span></h3>
           <button class="package-buy-btn">Get Plan</button>
           <ul>
-            <li>Up to 3 pages</li>
+            <li>6 pages and above</li>
+            <li>Custom design</li>
             <li>24/7 up time</li>
-            <li>1 year technical support</li>
+            <li>2 year technical support</li>
           </ul>
         </div>
       </div>
