best update ever

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           for money. Click the button below to see the packages, click the
           button next to it to see some demos
         </p>
-        <button class="primary-btn">Get started</button>
-        <button class="outline-btn">See demos</button>
+        <a href="#offers" class="primary-btn">Get started</a>
+        <a href="#about" class="outline-btn">See demos</a>
       </div>
       <div class="home-img">
         <img src="images/hero.jpg" alt="" />
