--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h2 class="package-title">Starter</h2>
           <p class="package-subtitle">starting at</p>
           <h3 class="price">49<span class="currency">$</span></h3>
-          <button class="package-buy-btn">Get Plan</button>
+          <a href="#contact" class="package-buy-btn">Get Plan</a>
           <!-- <div class="package-item">
             <i></i>
             <p>Up to 3 pages</p>
@@ -74,7 +74,7 @@
           <h2 class="package-title">Middle</h2>
           <p class="package-subtitle">starting at</p>
           <h3 class="price">69<span class="currency">$</span></h3>
-          <button class="package-buy-btn">Get Plan</button>
+          <a href="#contact" class="package-buy-btn">Get Plan</a>
 
           <ul>
             <li>Up to 5 pages</li>
@@ -87,7 +87,7 @@
           <h2 class="package-title">Premium</h2>
           <p class="package-subtitle">starting at</p>
           <h3 class="price">99<span class="currency">$</span></h3>
-          <button class="package-buy-btn">Get Plan</button>
+          <a href="#contact" class="package-buy-btn">Get Plan</a>
           <ul>
             <li>6 pages and above</li>
             <li>Custom design</li>
