--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
             This is a daycare website, where parents can find their perfect
             people for taking care of their children.
           </p>
+          <a
+            target="_blank"
+            class="package-buy-btn"
+            href="https://frozandaycare.netlify.app/"
+            >Learn More</a
+          >
         </div>
         <img class="project-img" src="/images/project1.png" alt="" />
       </div>
@@ -116,6 +122,12 @@
             so go try them out. There are a lot of recipies waiting to be
             discovered.
           </p>
+          <a
+            target="_blank"
+            class="package-buy-btn"
+            href="https://firehawk7803.github.io/Cooking-afghanin1/"
+            >Learn More</a
+          >
         </div>
         <img class="project-img" src="/images/project2.png" alt="" />
       </div>
@@ -126,6 +138,12 @@
             If you love books this is the perfect website for you. You can find
             a varity of differant books from the past to the future!
           </p>
+          <a
+            target="_blank"
+            class="package-buy-btn"
+            href="https://firehawk7803.github.io/booktech/"
+            >Learn More</a
+          >
         </div>
         <img class="project-img" src="/images/project3.png" alt="" />
       </div>
