--- a/index.html
+++ b/index.html
@@ -98,6 +98,23 @@
       </div>
     </section>
     <section class="about" id="about">
+      <div class="project" id="project2">
+        <div class="project-content">
+          <h1 class="project-title">Gaming Page</h1>
+          <p class="project-desc">
+            This website shows some games that I have developed during my
+            programming time. You can visit it to enjoy and play games in your
+            free time. Hope you enjoy playing our games.
+          </p>
+          <a
+            target="_blank"
+            class="package-buy-btn"
+            href="https://kuroshkhaliqi.github.io/gaming-landing/"
+            >Learn More</a
+          >
+        </div>
+        <img class="project-img" src="/images/project2.png" alt="" />
+      </div>
       <div class="project" id="project1">
         <div class="project-content">
           <h1 class="project-title">Frozan Daycare</h1>
