gaming icon added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="responsive.css" />
+    <title>Kurosh Dev | Your place to develope your dream</title>
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <nav class="nav-container">
@@ -113,7 +115,7 @@
             >Learn More</a
           >
         </div>
-        <img class="project-img" src="/images/project2.png" alt="" />
+        <img class="project-img" src="/images/gaming-icon-1.png" alt="" />
       </div>
       <div class="project" id="project1">
         <div class="project-content">
