--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             >Learn More</a
           >
         </div>
-        <img class="project-img" src="/images/gaming-icon-1.png" alt="" />
+        <img class="project-img" src="images/gaming-icon-1.png" alt="" />
       </div>
       <div class="project" id="project1">
         <div class="project-content">
@@ -131,7 +131,7 @@
             >Learn More</a
           >
         </div>
-        <img class="project-img" src="/images/project1.png" alt="" />
+        <img class="project-img" src="images/project1.png" alt="" />
       </div>
       <div class="project" id="project2">
         <div class="project-content">
@@ -148,7 +148,7 @@
             >Learn More</a
           >
         </div>
-        <img class="project-img" src="/images/project2.png" alt="" />
+        <img class="project-img" src="images/project2.png" alt="" />
       </div>
       <div class="project" id="project3">
         <div class="project-content">
@@ -164,7 +164,7 @@
             >Learn More</a
           >
         </div>
-        <img class="project-img" src="/images/project3.png" alt="" />
+        <img class="project-img" src="images/project3.png" alt="" />
       </div>
     </section>
     <section id="contact">
@@ -183,7 +183,7 @@
         </form>
       </div>
       <div class="contact-image">
-        <img src="/images/contact-img.jpg" alt="" />
+        <img src="images/contact-img.jpg" alt="" />
       </div>
     </section>
     <section id="footer">
